--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <li>Docker: Criando countainers sem dor de cabeça</li>
         <li>Ansible: Infraestrutura como código</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
-        <li>Kubernetes</li>
+        <li>Kubernetes: Introdução a orquestração de countainers</li>
     </ul>
 </body>
 </html>
